tests/snapshots/cli_help__cli_help_queue_add.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Add an item to the current queue

Usage: spotuify queue add [OPTIONS] [URIS]...

Arguments:
  [URIS]...  Spotify URI(s) to queue

Options:
      --ids <FILE>       Read Spotify URI(s) from a file, or `-` for stdin
      --search <SEARCH>  Search for a track and queue the first result
      --format <FORMAT>  Output format for the mutation receipt [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
